Change background img to contain to prevent it from being cut off at small window sizes

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body {
 
 .main {
     background-image: url('img/bg-clover.jpg');
-    background-size: cover;
+    background-size: contain;
 }
 
 /*_______________Footer_______________*/
